@@ -1,3 +1,10 @@
+2009-01-22  Roland McGrath  <roland@redhat.com>
+
+	* dwfl_segment_report_module.c (addr_segndx): Remove bogus adjustments
+	after address-matching loop.
+
+	* segment.c (lookup): Fix fencepost in checking for HINT match.
+
 2009-01-14  Roland McGrath  <roland@redhat.com>
 
 	* gzip.c [!BZLIB] (mapped_zImage): New function.
